# serializer version: 1
# name: test_wizard[choose-approval]
  '''
  <section class="s-section">
          <div class="s-section__container container">
              <div class="row">
                  <div class="col-12 col-md-9">
                      <div class="c-stepper mb-3 mb-lg-5">
                          <div class="progress progress--emploi">
                              <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" class="progress-bar progress-bar-100" role="progressbar">
                              </div>
                          </div>
                          <p>
                              <strong>Étape 2</strong>/2
                          </p>
                      </div>
                      <div class="c-form mb-3 mb-lg-5">
                          <form method="post">
                              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                              <input id="id_add_view-current_step" name="add_view-current_step" type="hidden" value="choose-approval"/>
  
                              <div class="form-group form-group-required"><label class="form-label" for="id_choose-approval-approval">PASS IAE de John DOE</label><select class="form-select" id="id_choose-approval-approval" name="choose-approval-approval">
    <option value="1">999999999999 — Du 01/01/2000 au 01/01/3000</option>
  
  </select><div class="form-text">Le PASS IAE concerné par le transfert de données vers l'Extranet IAE 2.0 de l'ASP</div>
  </div>
  
                              
                                  <p>
                                      Après avoir sélectionné le PASS IAE concerné et cliqué sur <i>"Confirmer"</i>, 2 cas de figure sont possibles :
                                  </p>
                                  <ul>
                                      <li>
                                          <p class="m-0">
                                              <b>Une fiche salarié existe déjà pour ce salarié et ce PASS IAE :</b> dans ce cas vous serez automatiquement redirigé sur la page de détail de cette fiche salarié.
                                          </p>
                                          <p>
                                              Si la fiche salarié est déjà intégrée et que vous avez besoin de la renvoyer dans l’Extranet IAE 2.0 de l’ASP, vous devez la <b>désactiver</b> puis la <b>réactiver</b>.
                                          </p>
                                      </li>
                                      <li>
                                          <b>Aucune fiche salarié n’existe pour ce salarié et ce PASS IAE :</b> dans ce cas vous serez redirigé vers le formulaire de création et d’envoi de la fiche salarié.
                                      </li>
                                  </ul>
                              
  
                              <hr/>
                              <p class="fs-xs">* champ obligatoire</p>
                              <div class="form-group text-end">
                                  
                                      <button class="btn btn-outline-primary" name="wizard_goto_step" type="submit" value="choose-employee">Retour</button>
                                  
                                  <button class="btn btn-primary" data-matomo-action="submit" data-matomo-category="fiches-salarié" data-matomo-event="true" data-matomo-option="création">
                                      Confirmer
                                  </button>
                              </div>
                          </form>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  '''
# ---
# name: test_wizard[choose-employee]
  '''
  <section class="s-section">
          <div class="s-section__container container">
              <div class="row">
                  <div class="col-12 col-md-9">
                      <div class="c-stepper mb-3 mb-lg-5">
                          <div class="progress progress--emploi">
                              <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" class="progress-bar progress-bar-50" role="progressbar">
                              </div>
                          </div>
                          <p>
                              <strong>Étape 1</strong>/2
                          </p>
                      </div>
                      <div class="c-form mb-3 mb-lg-5">
                          <form method="post">
                              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
                              <input id="id_add_view-current_step" name="add_view-current_step" type="hidden" value="choose-employee"/>
  
                              <div class="form-group form-group-required"><label class="form-label" for="id_choose-employee-employee">Nom du salarié</label><select class="form-select django-select2" data-allow-clear="false" data-minimum-input-length="0" data-theme="bootstrap-5" id="id_choose-employee-employee" lang="fr" name="choose-employee-employee" required="">
    <option selected="" value="">Sélectionnez le salarié</option>
  
    <option value="1">John Doe</option>
  
  </select><div class="form-text">Le salarié concerné par le transfert de données vers l'Extranet IAE 2.0 de l'ASP</div>
  </div>
  
                              
  
                              <hr/>
                              <p class="fs-xs">* champ obligatoire</p>
                              <div class="form-group text-end">
                                  
                                      <a class="btn btn-link btn-outline-primary" href="/employee_record/list?status=NEW">Annuler</a>
                                  
                                  <button class="btn btn-primary">
                                      Suivant
                                  </button>
                              </div>
                          </form>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  '''
# ---
